RESOLVED FIXED49757
Complete support for Unix editing mode
https://bugs.webkit.org/show_bug.cgi?id=49757
Summary Complete support for Unix editing mode
Avi Drissman
Reported 2010-11-18 13:08:21 PST
One bit isn't large enough to hold three values.
Attachments
Fix (3.84 KB, patch)
2010-11-18 13:14 PST, Avi Drissman
no flags
Fix try #2 (3.77 KB, patch)
2010-11-18 13:16 PST, Avi Drissman
no flags
Correct initialization order (4.89 KB, patch)
2010-11-18 13:34 PST, Avi Drissman
no flags
Avi Drissman
Comment 1 2010-11-18 13:14:43 PST
Avi Drissman
Comment 2 2010-11-18 13:16:10 PST
Created attachment 74283 [details] Fix try #2
Early Warning System Bot
Comment 3 2010-11-18 13:27:30 PST
Antonio Gomes
Comment 4 2010-11-18 13:29:11 PST
Comment on attachment 74283 [details] Fix try #2 Yay!
Avi Drissman
Comment 5 2010-11-18 13:31:13 PST
QT builder has a point. Will fix.
Antonio Gomes
Comment 6 2010-11-18 13:31:35 PST
(In reply to comment #3) > Attachment 74283 [details] did not build on qt: > Build output: http://queues.webkit.org/results/6171059 cc1plus: warnings being treated as errors ../../../WebCore/page/Settings.h: In constructor 'WebCore::Settings::Settings(WebCore::Page*)': ../../../WebCore/page/Settings.h:409: error: 'WebCore::Settings::m_allowScriptsToCloseWindows' will be initialized after ../../../WebCore/page/Settings.h:361: error: 'unsigned int WebCore::Settings::m_editingBehaviorType' ../../../WebCore/page/Settings.cpp:88: error: when initialized here The initialization order matters.
Avi Drissman
Comment 7 2010-11-18 13:34:37 PST
Created attachment 74288 [details] Correct initialization order Yes, I realized this right after I'd uploaded the last one.
Eric Seidel (no email)
Comment 8 2010-11-19 05:45:09 PST
Comment on attachment 74283 [details] Fix try #2 Cleared Antonio Gomes's review+ from obsolete attachment 74283 [details] so that this bug does not appear in http://webkit.org/pending-commit.
WebKit Commit Bot
Comment 9 2010-11-19 14:37:17 PST
Comment on attachment 74288 [details] Correct initialization order Clearing flags on attachment: 74288 Committed r72441: <http://trac.webkit.org/changeset/72441>
WebKit Commit Bot
Comment 10 2010-11-19 14:37:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.