2010-11-19  Avi Drissman  <avi@google.com>

Reviewed by Antonio Gomes.

        Complete support for Unix editing mode
        https://bugs.webkit.org/show_bug.cgi?id=49757

        * page/Settings.cpp:
        (WebCore::Settings::Settings):
        * page/Settings.h:
2010-11-19  Avi Drissman  <avi@google.com>

        Reviewed by Antonio Gomes.

        Complete support for Unix editing mode
        https://bugs.webkit.org/show_bug.cgi?id=49757

        * DumpRenderTree/LayoutTestController.cpp:
        (setEditingBehaviorCallback):
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::setEditingBehavior):

Canonical link: https://commits.webkit.org/62903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72441 268f45cc-cd09-0410-ab3c-d52691b4dbfc