WebKitTools/DumpRenderTree/LayoutTestController.cpp
@@ -1786,8 +1786,8 @@ static JSValueRef setEditingBehaviorCallback(JSContextRef context, JSObjectRef f
     char* behaviorBuffer = new char[maxLength + 1];
     JSStringGetUTF8CString(editingBehavior.get(), behaviorBuffer, maxLength);
 
-    if (strcmp(behaviorBuffer, "mac") && strcmp(behaviorBuffer, "win")) {
-        JSRetainPtr<JSStringRef> invalidArgument(JSStringCreateWithUTF8CString("Passed invalid editing behavior. Must be 'mac' or 'win'."));
+    if (strcmp(behaviorBuffer, "mac") && strcmp(behaviorBuffer, "win") && strcmp(behaviorBuffer, "unix")) {
+        JSRetainPtr<JSStringRef> invalidArgument(JSStringCreateWithUTF8CString("Passed invalid editing behavior. Must be 'mac', 'win', or 'unix'."));
         *exception = JSValueMakeString(context, invalidArgument.get());
         return JSValueMakeUndefined(context);
     }
