WebKitTools/DumpRenderTree/chromium/LayoutTestController.cpp
@@ -1492,7 +1492,7 @@ void LayoutTestController::setEditingBehavior(const CppArgumentList& arguments, 
         m_shell->preferences()->editingBehavior = WebSettings::EditingBehaviorUnix;
         m_shell->applyPreferences();
     } else
-        logErrorToConsole("Passed invalid editing behavior. Should be 'mac' or 'win'.");
+        logErrorToConsole("Passed invalid editing behavior. Should be 'mac', 'win', or 'unix'.");
 }
 
 void LayoutTestController::setMockDeviceOrientation(const CppArgumentList& arguments, CppVariant* result)
